# evdev-mapper

./: Cargo.toml  README.md  device.conf
.devcontainer/: Dockerfile  devcontainer.json
src/: args.rs  config.rs  device.rs  error.rs  event.rs  ew_device.rs  ew_types.rs  ew_uinput.rs  main.rs  mapping.rs  output_event.rs  uinput.rs  util.rs
