[package]
name = "evdev-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# https://github.com/emberian/evdev
evdev = { version = "0.12.1", features = ["tokio", "serde"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
